--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-8 col-sm-offset-2">
         <div class="masonry-wrapper-cols">
           <div class="masonry-gutter"></div>
-          <% @post_images.each do |post_image| %>
+          <% post_images.each do |post_image| %>
             <div class="masonry-block">
               <div class="block block-image v1">
                 <div class="block-image">
@@ -27,14 +27,14 @@
                       <%= post_image.user.name %>
                     </li>
                     <li>
-                    <a href="#">23 コメント</a>
+                    <h2 class="comment-count"><%= post_image.post_comments.count %>件コメント</h2>
                     </li>
                   </ul>
                 </div>
               </div>
             </div>
           <% end %>
-          <%= paginate @post_images, class: "pagenate" %>
+          <%= paginate post_images, class: "pagenate" %>
         </div>
       </div>
     </div>
